--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
   --secondary-color: #242424;
 
   --primary-bg: #242424;
+  --success-bg: #369361;
 
   --primary-square: rgb(119, 154, 84);
   --secondary-square: rgb(233, 237, 204);
