--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
 @import url("./styles/Board.scss");
 @import url("./styles/Loading.scss");
 @import url("./styles/Hint.scss");
+@import url("./styles/Square.scss");
 
 
 #root {
@@ -17,39 +18,4 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center; */
-}
-
-
-
-
-
-
-
-.square {
-  position: relative;
-  width: 12.5%;
-  height: 12.5%;
-  flex: 0 0 12.5%;
-
-  &.white {
-    background: var(--primary-square);
-  }
-
-  &.black {
-    background: var(--secondary-square);
-  }
-
-  .piece {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: grab;
-
-    img {
-      max-width: 70%;
-      max-height: 70%;
-    }
-  }
 }
