--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@
 @import url("./styles/Square.scss");
 @import url("./styles/GameApp.scss");
 @import url("./styles/Coordinates.scss");
+@import url("./styles/Error.scss");
 
 
 #root {
