--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,8 @@
 @import url("./styles/GameApp.scss");
 @import url("./styles/Coordinates.scss");
 @import url("./styles/Error.scss");
+@import url("./styles/GameInfo.scss");
+@import url("./styles/HistoryBox.scss");
 
 
 #root {
